<resources>
    <string name="app_name">subject_management</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to toolbar-->
    <string name="menu_plan">予定</string>
    <string name="menu_subject">講義</string>
    <string name="menu_score">成績</string>

    <string name="monday">月</string>
    <string name="tuesday">火</string>
    <string name="wednesday">水</string>
    <string name="thursday">木</string>
    <string name="friday">金</string>
    <string name="subjectName">講義名</string>
    <string name="ok">はい</string>
    <string name="close">キャンセル</string>
    <string name="year">年度</string>
    <string name="semesterName">半期</string>
    <string name="score">成績</string>
    <string name="registerScore">登録</string>
    <string name="GPA">通算GPA : </string>
</resources>
